--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     background-color: #333;
     padding: 10px 20px;
+    position: relative;
 }
 
     /* Style the links inside the navigation bar */
@@ -49,6 +50,12 @@
         justify-content: flex-end; /* Align to the right */
     }
     
+    .burger-menu {
+        display: none; /* Hide burger menu by default */
+        font-size: 30px;
+        cursor: pointer;
+    }
+
     /* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
     @media screen and (max-width: 600px) {
         .topnav {
@@ -57,7 +64,7 @@
         }
     
         .topnav a {
-            float: none;
+            /*float: none; */
             display: block;
             width: 100%; /* Make the links full-width for mobile view */
             text-align: center;
@@ -80,11 +87,25 @@
             flex-direction: column; /* Stack the centered links vertically on small screens */
             align-items: center; /* Center the links in the container */
             gap: 0; /* Remove any gap between the links */
+            display: none; /* Hide the menu links initially */
         }
     
         .topnav-centered a {
             width: auto; /* Allow the links to take their natural width */
             margin: 0; /* Remove any margin */
+        }
+
+        .burger-menu {
+            display: block; /* Show burger menu on mobile */
+        }
+    
+        .topnav-centered.responsive {
+            display: block; /* Show the menu when burger is clicked */
+        }
+    
+        .topnav a.active {
+            background-color: #04AA6D;
+            color: white;
         }
     }
   
