--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     position: relative;
     width: 100%; /* Ensure navbar spans the full width of the screen */
     box-sizing: border-box; /* Ensure padding and border are included in width */
+    z-index: 1000; /* Ensure navbar is above other content */
 }
 
 /* Links inside the nav bar */
@@ -59,8 +60,6 @@
     cursor: pointer;
 }
 
-
-
 /* Body */
 body {
     background-color: white;
@@ -69,11 +68,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
-
 /* Index Page */
 
 .index-parent {
-    background-color: white; /* colour between grid elements*/
+    background-color: white; /* colour between grid elements */
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr; /* Left, Middle, Middle, Middle, Right */
     grid-template-rows: auto; /* Adjusts based on content */
@@ -82,8 +80,39 @@ body {
 
 /* Full-width intro */
 .index-header {
+    /* Background */
     grid-column: 1 / -1; /* Spans all columns */
+
     background-color: lightblue;
+    background-image: url('assets/img/board.png');
+    background-size: cover; /* Ensures the image covers the entire div */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents image repetition */
+    background-attachment: fixed;
+
+    display: flex; /* Use flexbox for alignment */
+    align-items: flex-end; /* Align text at the bottom */
+    justify-content: center; /* Center horizontally */
+
+    
+    width: 100%;
+    height: 68vh; /* Takes up 70% of the viewport height */
+}
+
+/* Text */
+.index-header-content {
+    text-align: center;
+    color: white;
+    text-shadow: /* Creates a white outline */
+        -1px -1px 0 black,  
+         1px -1px 0 black,
+        -1px  1px 0 black,
+         1px  1px 0 black; 
+    position: relative;
+    z-index: 1; /* Ensure text is above the background */
+    padding-bottom: 2vh;
+    width: 60%; /* Adjust as needed to match center row width */
+    max-width: 1000px; /* Prevents excessive width on large screens */
 }
 
 /* Left Sidebar */
@@ -127,9 +156,6 @@ body {
     text-align: center;
     padding: 20px;
 }
-
-
-
 
 /* Responsive navigation menu for small screens */
 @media screen and (max-width: 618px) { /* Width that the screen changes to mobile view */
@@ -190,8 +216,11 @@ body {
         display: block; /* Show the links when burger menu is clicked */
     }
 
+    /* index page mobile view */
 
-    /* index page mobile view*/
+    .index-header-content {
+        width: 90%; /* Adjust as needed to match center row width */
+    }
 
     .index-left-column,
     .index-right-column {
