Added filler pages, reordered nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
     grid-column: 1 / -1; /* Spans all columns */
 
     background-color: lightblue;
-    background-image: url('assets/img/board.png');
+    background-image: url('../assets/img/board.png');
     background-size: cover; /* Ensures the image covers the entire div */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents image repetition */
