--- a/css/style.css
+++ b/css/style.css
@@ -348,9 +348,13 @@ body {
     color: rgb(238, 238, 238);
     padding: 5px 10px;
     position: absolute;
-    left: -80px;
+    left: -150px;
     top: 0;
     border-radius: 5px;
+    max-width: 100px;  /* limit width */
+    white-space: normal; /* Allows wrapping */
+    word-break: break-word; /* Break long words if needed */
+    text-align: center;
 }
 
 .timeline .timeline-content {
@@ -504,6 +508,11 @@ ul.timeline li {
     .project-grid {
         justify-content: center;
         grid-template-columns: 80%;
+    }
+
+    .timeline .timeline-date {
+    position: static !important; /* Remove absolute positioning */
+    margin: 0 auto 0 auto; /* auto left/right centers it */
     }
 
 
